--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
               <li>Named colors: red, black</li>
               <li>RGB colors: rgb(255,0,0)</li>
             </ul>
+            You can manipulate colormap range by adding row with no country name and some value. For example: ['',0] would stretch color map to include zero.
         </details>
         </div>
     
